(bug 49285) ArticleFeedbackv5: Text is blurry due to use of CSS3 filter
Blurry texts: moved background imgs & CSS grayscale filter to :before
* top left feedback count (#articleFeedbackv5-showing-count-wrap span)
* top right feedback entry status (.articleFeedbackv5-<status>-marker)

Updated fallback png cog image

Bug: 49285

--- a/modules/ext.articleFeedbackv5/ext.articleFeedbackv5.dashboard.css
+++ b/modules/ext.articleFeedbackv5/ext.articleFeedbackv5.dashboard.css
@@ -96,8 +96,10 @@ select {
 	display: inline;
 	line-height: 30px;
 }
-#articleFeedbackv5-showing-count-wrap span,
-#articleFeedbackv5-special-watchlist-showing-wrap span {
+#articleFeedbackv5-showing-count-wrap span:before,
+#articleFeedbackv5-special-watchlist-showing-wrap span:before {
+	content: '';
+
 	padding: 5px 0 5px 25px;
 
 	/* @embed */
